appId: host.exp.exponent
---
- tapOn:
    id: fab-action-hub
- tapOn:
    id: action-add-transaction
- extendedWaitUntil:
    visible:
      id: transaction-amount-input
    timeout: 25000
- tapOn:
    id: transaction-amount-input
- eraseText
- inputText: ${TRANSACTION_AMOUNT}
- tapOn:
    id: transaction-save-button
- runFlow:
    when:
      visible:
        id: android:id/button1
    commands:
      - tapOn:
          id: android:id/button1
- runFlow:
    when:
      visible:
        id: transaction-cancel-button
    commands:
      - tapOn:
          id: transaction-cancel-button
- extendedWaitUntil:
    notVisible:
      id: transaction-amount-input
    timeout: 25000
